TagLib 1.9.1 (Oct 8, 2013)
==========================

 * Fixed binary incompatible change in TagLib::Map and TagLib::List.
 * Fixed constructing String from ByteVector.
 * Fixed compilation on MSVC with the /Zc:wchar_t- option.
 * Fixed detecting of RIFF files with invalid chunk sizes.

TagLib 1.9 (Oct 6, 2013)
========================

 * Added support for the Ogg Opus file format.
 * Added support for INFO tags in WAV files.
 * Changed FileStream to use Windows file API.
 * Included taglib-config.cmd script for Windows.
 * New ID3v1::Tag methods for working directly with genre numbers.
 * New MPEG::File methods for checking which tags are saved in the file.
 * Added support for the PropertyMap API to ASF and MP4 files.
 * Added MusicBrainz identifiers to the PropertyMap API.
 * Allowed reading of MP4 cover art without an explicitly specified format.
 * Better parsing of corrupted FLAC files.
 * Fixed saving of PropertyMap comments without description into ID3v2 tags.
 * Fixed crash when parsing certain XM files.
 * Fixed compilation of unit test with clang.
 * Better handling of files that can't be open or have read-only permissions.
 * Improved atomic reference counting.
 * New hookable API for debug messages.
 * More complete Windows install instructions.
 * Many smaller bug fixes and performance improvements.

TagLib 1.8 (Sep 6, 2012)
========================

1.8:

 * Added support for OWNE ID3 frames.
 * Changed key validation in the new PropertyMap API.
 * ID3v1::Tag::setStringHandler will no londer delete the previous handler,
   the caller is responsible for this.
 * File objects will also no longer delete the passed IOStream objects. It
   should be done in the caller code after the File object is no longer
   used.
 * Added ID3v2::Tag::setLatin1StringHandler for custom handling of
   latin1-encoded text in ID3v2 frames.
 * Fixed validation of ID3v2 frame IDs (IDs with '0' were ignored).

1.8 BETA:

 * New API for accessing tags by name.